...
    <string name="event_details">Event Details</string>
    <string name="my_events">My Events</string>
    <string name="your_name">Your name</string>
    <string name="e_mail">E-mail</string>
    <string name="contact">Contact:</string>
    <string name="send">Send</string>
    <string name="error_invalid_name">Invalid name</string>
    <string name="error_invalid_email">This email is not valid</string>
    <string name="checkin">Checkin!</string>
    <string name="a_few_more_details_and_voila">A few more details and voila!</string>
    <string name="is_checkin_successful">Done! Thank you ;)</string>
    <string name="is_checkin_unsuccessful">Sorry, something went wrong… please try again</string>
    <string name="share_event">Hey, check it out:\n *%1$s* \n\n%2$s \n\nPrice: %3$s \n\nLocation: %4$s \n\nFor more information please visit: %5$s</string>
    <string name="event_image">Event image</string>
...
